--- a/src/App.css
+++ b/src/App.css
@@ -77,12 +77,23 @@ button {
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
+.navlink {
+  border: 1px solid transparent;
+  padding: 4vw 1vw;
+  font-size: max(1rem, 1.5vw);
+  font-weight: 500;
+  font-family: inherit;
+  color: #0f0f0f;
+  background-color: #ffffff;
+  transition: border-color 0.25s;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
 
 button {
   cursor: pointer;
 }
 
-button:hover {
+button:hover, .navlink:hover {
   border-color: #396cd8;
 }
 button:active {
@@ -110,11 +121,11 @@ button {
   }
 
   input,
-  button {
+  button, .navlink {
     color: #ffffff;
     background-color: #0f0f0f98;
   }
-  button:active {
+  button:active, .navlink:hover {
     background-color: #0f0f0f69;
   }
 }
