--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,12 @@
   line-height: 24px;
   font-weight: 400;
 
-  color: #0f0f0f;
-  background-color: #f6f6f6;
+  /* default */
+  /* color: #0f0f0f;
+  background-color: #f6f6f6; */
+
+  color: #f6f6f6;
+  background-color: #2f2f2f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -57,7 +61,8 @@ a {
 }
 
 a:hover {
-  color: #535bf2;
+  /* color: #535bf2; */
+  color: #24c8db;
 }
 
 h1 {
@@ -72,8 +77,10 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  color: #0f0f0f;
-  background-color: #ffffff;
+  /* color: #0f0f0f;
+  background-color: #ffffff; */
+  color: #ffffff;
+  background-color: #0f0f0f98;
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -83,8 +90,10 @@ button {
   font-size: max(1rem, 1.5vw);
   font-weight: 500;
   font-family: inherit;
-  color: #0f0f0f;
-  background-color: #ffffff;
+  /* color: #0f0f0f;
+  background-color: #ffffff; */
+  color: #ffffff;
+  background-color: #0f0f0f98;
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -95,10 +104,12 @@ button {
 
 button:hover, .navlink:hover {
   border-color: #396cd8;
+  background-color: #0f0f0f69;
 }
 button:active {
   border-color: #396cd8;
-  background-color: #e8e8e8;
+  /* background-color: #e8e8e8; */
+  background-color: #0f0f0f69;
 }
 
 input,
@@ -110,7 +121,7 @@ button {
   margin-right: 5px;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
     background-color: #2f2f2f;
@@ -128,4 +139,4 @@ button {
   button:active, .navlink:hover {
     background-color: #0f0f0f69;
   }
-}
+} */
