--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,26 @@ button {
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
+.setting {
+  border: 1px solid transparent;
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: inherit;
+  /* color: #0f0f0f;
+  background-color: #ffffff; */
+  color: #ffffff;
+  background-color: #0f0f0f98;
+  transition: border-color 0.25s;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.setting:hover {
+  /* color: #24c8db; */
+  /* border-color: #396cd8; */
+  background-color: #0f0f0f69;
+}
+
 
 button {
   cursor: pointer;
